# gufo_font

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  index.html  manifest.yml  mkdocs.yml  package.json  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/DISCUSSION_TEMPLATE/: icon-requests.yml  icon_requests.yml
.github/workflows/: build-docs.yml  publish-cf.yml  publish-npm.yml  publish.yml  tests.yml
0.0.1/: gufo-font.css
0.0.5/: gufo-font.css  gufo-font.css.map
0.0.7/: gufo-font.css  gufo-font.css.map
0.0.8/: gufo-font.css  gufo-font.css.map  manifest.json
0.0.9/: gufo-font.css  gufo-font.css.map  manifest.json
CHANGELOG/: index.html
assets/: extra.css  gufo-font.css  gufo-font.css.map  hero.css  icons.css  icons.js
dev/: index.html
dev/calibration-chart/: index.html
dev/codepoints/: index.html
dev/metrics/: index.html
dev/naming/: index.html
dev/palette/: index.html
docs/: icons.md  index.md  quickstart.md
docs/assets/: dialog.css  extra.css  icons.css  icons.js
docs/dev/: calibration-chart.md  codepoints.md  index.md  metrics.md  naming.md  palette.md
docs/license/: LICENSE-CC-BY-ND-4.0.md  index.md
icons/: index.html
inkscape/: README.md
latest/: gufo-font.css.map  manifest.json
license/: index.html
license/LICENSE-BSD/: index.html
license/LICENSE-CC-BY-ND-4.0/: index.html
quickstart/: index.html
scripts/: README.md  build  compile-manifest.py  configure-scss.py  extract-layers.py  font-summary.py  make-codepoints.py  make-noc-collections.py  make-package.py  post-process.py  publish-cf
scripts/docs/: copy_assets.py  gen_icons.py
scripts/lib/: manifest.py
scss/: _animation.scss  _colors.scss  _core.scss  _flip.scss  _font.scss  _glyphs.scss  _rotate.scss  _scale.scss  _stack.scss  _state.scss  _sub.scss  _transform.scss  _vars.scss  main.scss
search/: search_index.json
src/gufo/font/: manifest.py  scss.py
src/gufo/font/render/: icons.py
src/gufo/font/templates/: icons.md.j2
tests/: test_font.py  test_manifest.py  test_scss.py
webfonts/: LICENSE.md
