[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
  "wheel",
]

[project]
authors = [{name = "Gufo Labs"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
description = "Telecom and IT-oriented icon font"
keywords = ["font"]
license = "BSD-3-Clause"
name = "gufo_font"
requires-python = ">=3.13"
version = "0.1"

[project.optional-dependencies]
docs = [
  "click==8.2.1", # click 8.3.0 brokes mkdocs live reload
  "mkdocs-gen-files==0.5.0",
  "mkdocs-literate-nav==0.6.2",
  "mkdocs-material==9.6.11",
  "mkdocs-section-index==0.3.10",
  "mkdocstrings[python]==0.29.1",
]
ipython = [
  "ipython==9.6.0",
]
lint = [
  "mypy==1.18.2",
  "ruff==0.14.0",
  "types-PyYAML==6.0.12.3",
]
test = [
  "PyYAML>=6.0",
  "pytest-benchmark==5.1.0",
  "pytest-cov==7.0.0",
  "pytest==8.4.2",
]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
"Bug Tracker" = "https://github.com/gufolabs/gufo_font/issues"
Changelog = "https://github.com/gufolabs/gufo_font/blob/master/CHANGELOG.md"
Documentation = "https://docs.gufolabs.com/gufo_font/"
Homepage = "https://github.com/gufolabs/gufo_font/"
"Source Code" = "https://github.com/gufolabs/gufo_font/"

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff.lint]
ignore = ["D203", "D212", "D107", "S314"]
# Enable
select = [
  "E", # Pycodestyle Error
  "F", # Pyflakes
  "W", # Pycodestyle Warning
  "C90", # mccabe
  "I", # isort
  "D", # Pydocstyle
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  "S", # flake8-bandit
  "BLE", # flake8-blind-except
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "C4", # flake8-comprehensions 
  "EM", # flake8-errmsg
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "PLC", # pylint
  "PLE", # pylint
  "PLR", # pylint
  "PLW", # pylint
  "PIE", # flake8-pie
  "RUF", # ruff specific
]
unfixable = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402", "D104"]
"tests/*.py" = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "S101", # Use of assert detected
  "S603", # `subprocess` call: check for execution of untrusted input
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
]
[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
strict = true
warn_unused_ignores = false
